??儭?Voice Agent Integration: ?芸??勗?頠犖?澆? Cartesia TTS ?蔭

--- a/soft-voice-mvp/backend/env.example
+++ b/soft-voice-mvp/backend/env.example
@@ -3,7 +3,8 @@ OPENAI_API_KEY=sk-your_openai_api_key_here
 
 # Cartesia TTS配置
 CARTESIA_API_KEY=your_cartesia_api_key_here
-CARTESIA_VOICE_ID=sonic
+# 花小軟專屬 Voice ID（老爸提供）
+CARTESIA_VOICE_ID=d3cb9a1f-73d1-48d4-8ee9-53183b40e284
 
 # 伺服器配置
 PORT=3000
