?? Environment configuration: 摰? Cartesia ?啣?霈?蔭

--- a/soft-voice-mvp/backend/env.example
+++ b/soft-voice-mvp/backend/env.example
@@ -1,11 +1,13 @@
-# OpenAI API配置
+# 🌐 OpenAI（或其他 LLM）設定
 OPENAI_API_KEY=sk-your_openai_api_key_here
 
-# Cartesia TTS配置
+# 🗣️ Cartesia 語音設定
 CARTESIA_API_KEY=your_cartesia_api_key_here
-# 花小軟專屬 Voice ID（老爸提供）
 CARTESIA_VOICE_ID=d3cb9a1f-73d1-48d4-8ee9-53183b40e284
+CARTESIA_TTS_MODEL_ID=sonic-3
+CARTESIA_LANGUAGE=zh
+CARTESIA_SAMPLE_RATE=44100
 
-# 伺服器配置
+# 🖥️ Server 設定
 PORT=3000
 
