如何體驗cursor.2.0的性能

--- a/soft-voice-mvp/backend/env.example
+++ b/soft-voice-mvp/backend/env.example
@@ -8,6 +8,15 @@ CARTESIA_TTS_MODEL_ID=sonic-3
 CARTESIA_LANGUAGE=zh
 CARTESIA_SAMPLE_RATE=44100
 
+# ElevenLabs Streaming
+#ELEVEN_API_KEY=sk_...
+#ELEVEN_VOICE_ID=21m00Tcm4TlvDq8ikWAM
+#ELEVEN_MODEL_ID=eleven_multilingual_v2
+#ELEVEN_STABILITY=0.45
+#ELEVEN_SIMILARITY=0.75
+#ELEVEN_STYLE=0.5
+#ELEVEN_OPTIMIZE_LATENCY=2
+
 # 🖥️ Server 設定
 PORT=3000
 
